Created Landing page with Navbar and footer

--- a/client/src/components/styles/bootstrap.css
+++ b/client/src/components/styles/bootstrap.css
@@ -3669,7 +3669,7 @@ textarea.form-control-lg {
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
+  color: var(--bs-light);
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3781,7 +3781,7 @@ textarea.form-control-lg {
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 1.25rem;
-  --bs-navbar-brand-color: #5a5a5a;
+  --bs-navbar-brand-color: var(--bs-light);
   --bs-navbar-brand-hover-color: #5a5a5a;
   --bs-navbar-nav-link-padding-x: 0.5rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
@@ -10997,4 +10997,13 @@ legend {
 .list-group-item h6,
 .list-group-item .h6 {
   color: inherit;
+}
+
+#footer {
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+
 }
