created add task page, and edit task forms

--- a/client/src/components/styles/Task.css
+++ b/client/src/components/styles/Task.css
@@ -2,3 +2,13 @@
     align-self: center;
 }
 
+.hidden {
+    display: none;
+}
+
+.buttonContainer {
+    margin-top: 0;
+    display: flex;
+    padding-bottom: 10;
+}
+
