--- a/client/src/styles/Mainscreen.css
+++ b/client/src/styles/Mainscreen.css
@@ -4,6 +4,7 @@
     min-height: 93vh;
     display: flex;
     padding: 10px 0;
+    background-color: rgb(247,248,250);
 }
 
 .page {
@@ -22,3 +23,4 @@
         justify-content: center;
     }
 }
+
